hasta la 3 con fallos

--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,3 +1,11 @@
+
+<nav>
+    <ul>
+      <li><a [routerLink]="['my-home']">Home</a></li>
+      <li><a [routerLink]="['movies']">My Movies</a></li>
+    </ul>
+  </nav>
 <h1>
   {{title}}
 </h1>
+<router-outlet></router-outlet>
