done but cannot print detail of movies -- routerlink not working

--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -2,7 +2,7 @@
 <nav>
     <ul>
       <li><a [routerLink]="['my-home']">Home</a></li>
-      <li><a [routerLink]="['movies']">My Movies</a></li>
+      <li><a [routerLink]="['my-movie/:id']">My Movies</a></li>
     </ul>
   </nav>
 <h1>
