--- a/starter-code/src/app/my-home/my-home.component.css
+++ b/starter-code/src/app/my-home/my-home.component.css
@@ -1,3 +1,11 @@
 .billbord-movies-continer {
+display: flex;
+display: inline-block;
+border: 5px solid navy;
+margin-right: 10px;
+}
 
+img {
+  width: 170px;
+  height: 170px;
 }
