--- a/starter-code/src/app/my-home/my-home.component.html
+++ b/starter-code/src/app/my-home/my-home.component.html
@@ -7,7 +7,6 @@
 <br>
 <img src="{{movie.poster}}" alt="">
 <br>
-<!-- //link no me va -->
-  <a [routerLink] = "['movie', movie.id]">Details</a>
+<a [routerLink] = "['/my-movie',movie.id]">Details</a>
   <!-- <app-my-home></app-my-home> -->
 </div>
